cli/tests/ui/parse_missing_comma.stderr
Error: manifest::json5_error

  × check failed
  ╰─▶ json5 parse error: missing `,`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/parse_missing_comma.json5:3:3]
 2 │   manifest_version: "0.1.0"
 3 │   components: {
   ·   ┬
   ·   ╰── missing `,`
 4 │     tau2: "./tau2.json5",
   ╰────
